syntax = "proto3";

enum NamedObjectStorageCategory {
    Storage = 0;
    Cache = 1;
}

message ArchiveInnerFileMeta {
    uint32 access = 1;
    uint64 insert_time = 2;
    uint64 update_time = 3;
    bytes create_dec_id = 4;

    NamedObjectStorageCategory storage_category = 5;
    
    optional string context = 6;
}